force-app/main/default/objects/SALES_OFFICE__c/SALES_OFFICE__c.object-meta.xml
<CustomObject>
    <description>Entidad custom que contiene el maestro de relaciones para transformar el código de la oficina de ventas por el nombre.</description>
    <label>Sales Office</label>
    <nameField>
        <label>Nombre de SALES_OFFICE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>