force-app/main/default/objects/SALES_OFFICE__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the Sales office</description>
    <label>Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>