force-app/main/default/objects/SALES_OFFICE__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Código de sociedad de referencia. Código COMPANY</description>
    <label>Company</label>
    <length>4</length>
    <type>Text</type>
</CustomField>