force-app/main/default/objects/SALES_OFFICE__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone</description>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>