force-app/main/default/objects/SALES_OFFICE__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <description>RegionName</description>
    <label>RegionName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>