force-app/main/default/objects/SALES_OFFICE__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <description>Código de la oficina de ventas</description>
    <externalId>true</externalId>
    <label>SalesOffice</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>