force-app/main/default/objects/SALES_OFFICE__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Sales Office</relationshipLabel>
    <relationshipName>Sales_Office</relationshipName>
    <type>Lookup</type>
</CustomField>