force-app/main/default/objects/SALES_OFFICE__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Shorter option of the Sales Office Name</description>
    <label>Short Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>