force-app/main/default/objects/SALES_OFFICE__c/fields/WaitingList__c.field-meta.xml
<CustomField>
    <fullName>WaitingList__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Sales Office Waiting List?</description>
    <label>Waiting List</label>
    <type>Checkbox</type>
</CustomField>