force-app/main/default/objects/SALES_OFFICE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SalesOffice__c</columns>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>Postcode__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>WaitingList__c</columns>
    <columns>Region__c</columns>
    <columns>RegionName__c</columns>
    <columns>SalesOrg__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>