force-app/main/default/objects/SALES_OFFICE__c/listViews/USA.listView-meta.xml
<ListView>
    <fullName>USA</fullName>
    <columns>SalesOffice__c</columns>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>Postcode__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>WaitingList__c</columns>
    <columns>SalesOrg__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryCode__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>USA</label>
</ListView>